# dtccompetitiveanalysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: adding-a-platform.md  architecture.md  caveats.md
eca/: aggregate.py  cli.py  dashboard.py  models.py  report.py
prompts/: category-mix.md  competitive-analysis.md  persona-deep-dive.md
skills/wonderland-dtc-competitive-analysis/: SKILL.md
skills/wonderland-dtc-competitive-analysis/prompts/: operator-questions.md
skills/wonderland-dtc-competitive-analysis/scripts/: cli.py  crawler.py  discovery.py  dom_fallback.py  extractor.py
skills/wonderland-review-scraper/: SKILL.md  requirements.txt
skills/wonderland-review-scraper/scripts/: cli.py  output.py
